--- a/.classpath
+++ b/.classpath
@@ -35,7 +35,7 @@
 			<attribute name="m2e-apt" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry combineaccessrules="false" kind="src" path="/datanucleus"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/datanucleus-master"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
