--- a/.classpath
+++ b/.classpath
@@ -38,6 +38,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/datanucleus-master"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/datanucleus"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
